Add bataanlogo to public folder

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 # Frontend Environment Variables for Production
 # Copy this to .env and update with your actual values
 
-# Backend API URL (provided by IT department)
-VITE_API_URL=https://api-pgb-events.gov.ph
+# Backend API URL (your actual backend domain from Coolify)
+# IMPORTANT: NO trailing slash!
+VITE_API_URL=https://eventscheduler-api.bataan.gov.ph
 
 # Socket.IO URL (same as API URL)
-VITE_SOCKET_URL=https://api-pgb-events.gov.ph
+# IMPORTANT: NO trailing slash!
+VITE_SOCKET_URL=https://eventscheduler-api.bataan.gov.ph
 
 # Application Environment
 VITE_NODE_ENV=production
