--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/socket.io": "^3.0.1",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^8.2.2",
     "eslint": "^9.36.0",
