Enhanced Calendar List View and All Events page

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.22",
     "howler": "^2.2.4",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
